--- a/Food Finder/Views/Base.lproj/Main.storyboard
+++ b/Food Finder/Views/Base.lproj/Main.storyboard
@@ -856,27 +856,26 @@
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2PB-q5-UAn">
-                                <rect key="frame" x="0.0" y="412" width="414" height="198"/>
+                                <rect key="frame" x="0.0" y="412" width="414" height="193.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aZ-cK-qEb">
-                                <rect key="frame" x="0.0" y="618" width="394" height="21"/>
+                                <rect key="frame" x="0.0" y="613.5" width="394" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGr-zZ-iDl">
+                                <rect key="frame" x="0.0" y="648" width="394" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnF-bu-xeO">
-                                <rect key="frame" x="184" y="783" width="46" height="30"/>
-                                <state key="normal" title="Save"/>
-                                <connections>
-                                    <action selector="saveButtonPressed:" destination="whz-DC-Umk" eventType="touchUpInside" id="eOV-o4-pVw"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1vN-hf-UgR">
-                                <rect key="frame" x="0.0" y="618" width="394" height="21"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1vN-hf-UgR">
+                                <rect key="frame" x="0.0" y="613.5" width="394" height="35.5"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -884,21 +883,25 @@
                                     <outlet property="delegate" destination="whz-DC-Umk" id="wk6-Qc-f0b"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MXk-2G-1Hm">
-                                <rect key="frame" x="0.0" y="647" width="394" height="21"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MXk-2G-1Hm">
+                                <rect key="frame" x="0.0" y="648" width="394" height="30"/>
                                 <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="whz-DC-Umk" id="mLZ-ca-4Im"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QGr-zZ-iDl">
-                                <rect key="frame" x="0.0" y="647" width="394" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnF-bu-xeO">
+                                <rect key="frame" x="20" y="746" width="374" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="bIC-fv-cPg"/>
+                                </constraints>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveButtonPressed:" destination="whz-DC-Umk" eventType="touchUpInside" id="eOV-o4-pVw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -906,13 +909,13 @@
                             <constraint firstItem="hUj-rC-xNl" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" id="6nT-c0-BfS"/>
                             <constraint firstItem="2PB-q5-UAn" firstAttribute="top" secondItem="hUj-rC-xNl" secondAttribute="bottom" constant="8" id="7pG-xP-MpL"/>
                             <constraint firstItem="1vN-hf-UgR" firstAttribute="top" secondItem="2PB-q5-UAn" secondAttribute="bottom" constant="8" id="9Gh-ff-1qE"/>
-                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="1vN-hf-UgR" secondAttribute="bottom" constant="144" id="DG1-FC-8LR"/>
-                            <constraint firstItem="fnF-bu-xeO" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" constant="184" id="Eij-mp-WY8"/>
+                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="1vN-hf-UgR" secondAttribute="bottom" constant="97" id="DG1-FC-8LR"/>
+                            <constraint firstItem="fnF-bu-xeO" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" constant="20" id="Eij-mp-WY8"/>
                             <constraint firstItem="1vN-hf-UgR" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" id="Er9-z7-llq"/>
                             <constraint firstItem="Yrf-CC-MSh" firstAttribute="trailing" secondItem="MXk-2G-1Hm" secondAttribute="trailing" constant="20" id="Fis-fT-w8w"/>
-                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="MXk-2G-1Hm" secondAttribute="bottom" constant="115" id="KMb-fG-V2c"/>
-                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="QGr-zZ-iDl" secondAttribute="bottom" constant="115" id="Kqu-iM-XDl"/>
-                            <constraint firstItem="Yrf-CC-MSh" firstAttribute="trailing" secondItem="fnF-bu-xeO" secondAttribute="trailing" constant="184" id="O0y-ho-QkS"/>
+                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="MXk-2G-1Hm" secondAttribute="bottom" constant="68" id="KMb-fG-V2c"/>
+                            <constraint firstItem="fnF-bu-xeO" firstAttribute="top" secondItem="QGr-zZ-iDl" secondAttribute="bottom" constant="68" id="Kqu-iM-XDl"/>
+                            <constraint firstItem="Yrf-CC-MSh" firstAttribute="trailing" secondItem="fnF-bu-xeO" secondAttribute="trailing" constant="20" id="O0y-ho-QkS"/>
                             <constraint firstItem="2PB-q5-UAn" firstAttribute="trailing" secondItem="Yrf-CC-MSh" secondAttribute="trailing" id="TjQ-K3-x68"/>
                             <constraint firstItem="9aZ-cK-qEb" firstAttribute="top" secondItem="2PB-q5-UAn" secondAttribute="bottom" constant="8" id="U5x-dP-2b4"/>
                             <constraint firstItem="9aZ-cK-qEb" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" id="VDT-UE-Ne8"/>
@@ -922,7 +925,7 @@
                             <constraint firstItem="QGr-zZ-iDl" firstAttribute="top" secondItem="9aZ-cK-qEb" secondAttribute="bottom" constant="8" id="iwf-Zf-Puq"/>
                             <constraint firstItem="MXk-2G-1Hm" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" id="jlt-Ar-ro5"/>
                             <constraint firstItem="QGr-zZ-iDl" firstAttribute="leading" secondItem="Yrf-CC-MSh" secondAttribute="leading" id="n29-tG-cyL"/>
-                            <constraint firstItem="fnF-bu-xeO" firstAttribute="bottom" secondItem="Yrf-CC-MSh" secondAttribute="bottom" id="nnf-av-tke"/>
+                            <constraint firstItem="fnF-bu-xeO" firstAttribute="bottom" secondItem="Yrf-CC-MSh" secondAttribute="bottom" constant="-13" id="nnf-av-tke"/>
                             <constraint firstItem="Yrf-CC-MSh" firstAttribute="trailing" secondItem="1vN-hf-UgR" secondAttribute="trailing" constant="20" id="nnv-2d-XSv"/>
                             <constraint firstItem="hUj-rC-xNl" firstAttribute="trailing" secondItem="Yrf-CC-MSh" secondAttribute="trailing" id="vCO-qK-WgC"/>
                             <constraint firstItem="Yrf-CC-MSh" firstAttribute="trailing" secondItem="QGr-zZ-iDl" secondAttribute="trailing" constant="20" id="zz8-sb-HM4"/>
